# arduino_midi_library

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  README.txt  ReleaseNotes.md  _m_i_d_i__basic__i_o_8ino-example.html  _m_i_d_i__bench_8ino-example.html  _m_i_d_i__callbacks_8ino-example.html  _m_i_d_i__dual_merger_8ino-example.html  _m_i_d_i__input_8ino-example.html  a00001.html  a00002.html  a00002.js  a00002_source.html  a00003.html  a00004.html  a00005.html  a00005_source.html  a00006.html  a00006.js  a00007.html  a00007.js  a00008.html  a00008.js  a00008_source.html  a00009.html  a00009.js  a00009_source.html  a00010.html  a00010.js  a00010_source.html  a00011.html  a00011.js  a00011_source.html  a00012.html  (+212 more)
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: cmake.yml  platformio.yml
builder/: CMakeLists.txt  install-lcov.sh
doc/: Doxyfile  callbacks.txt  midi_DoxygenMainPage.h  sysex-codec.md  usb-midi.md
examples/ActiveSensing/: ActiveSensing.ino
examples/AltPinSerial/: AltPinSerial.ino  altPinSerialMIDI.h
examples/Basic_IO/: Basic_IO.ino
examples/Bench/: Bench.ino
examples/Bridge/: Bridge.ino
examples/Callbacks/: Callbacks.ino
examples/Chaining/: Chaining.ino
examples/CustomBaudRate/: CustomBaudRate.ino
examples/CustomMIDIandSerial/: CustomMIDIandSerial.ino
examples/CustomMIDIsettings/: CustomMIDIsettings.ino
examples/DualMerger/: DualMerger.ino
examples/ErrorCallback/: ErrorCallback.ino
examples/Hairless/: Hairless.ino
examples/Input/: Input.ino
examples/MidiUSB/: MidiUSB.ino
examples/MidiUSB-CompleteAPI/: MidiUSB-CompleteAPI.ino
examples/MidiUSB-Thru/: MidiUSB-Thru.ino
examples/NoteNames/: NoteNames.ino
examples/RPN_NRPN/: RPN_NRPN.ino  utility.h
res/: install_local_mac  install_mac  keywords.txt  packaging  packaging.command  packaging.sh  validate.py  validate.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_6d.js  all_7.js  all_70.js  all_72.js  all_73.js  all_74.js  all_75.js  all_76.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  (+128 more)
src/: CMakeLists.txt  MIDI.cpp  MIDI.h  MIDI.hpp  install.sh  midi_Defs.h  midi_Inline.hpp  midi_Message.h  midi_Namespace.h  midi_Platform.h  midi_RingBuffer.h  midi_RingBuffer.hpp  midi_Serial.h  midi_Settings.h  midi_USB.h  midi_UsbDefs.h  midi_UsbPacketInterface.h  midi_UsbPacketInterface.hpp  midi_UsbTransport.h  midi_UsbTransport.hpp  serialMIDI.h
test/: CMakeLists.txt
test/mocks/: CMakeLists.txt  RingBuffer.cpp  RingBuffer.h  RingBuffer.hpp  test-mocks.cpp  test-mocks.h  test-mocks_Defs.h  test-mocks_Namespace.h  test-mocks_SerialMock.cpp  test-mocks_SerialMock.h  test-mocks_SerialMock.hpp
test/unit-tests/: CMakeLists.txt  unit-tests.cpp  unit-tests.h  unit-tests_MidiMessage.cpp  unit-tests_Namespace.h
test/unit-tests/tests/: unit-tests_MidiInput.cpp  unit-tests_MidiInputCallbacks.cpp  unit-tests_MidiMessage.cpp  unit-tests_MidiOutput.cpp  unit-tests_MidiThru.cpp  unit-tests_MidiUsb.cpp  unit-tests_MidiUsbDefs.cpp  unit-tests_MidiUsbPacketInterface.cpp  unit-tests_Platform.cpp  unit-tests_Platform.h  unit-tests_RingBuffer.cpp  unit-tests_SerialMock.cpp  unit-tests_Settings.cpp  unit-tests_Settings.h  unit-tests_SysExCodec.cpp
(+56 files in other folders)
